server: update sidebar handlers
