# server/docs/swagger.json
@@ -1,11 +1,9 @@
 {
     "swagger": "2.0",
     "info": {
+        "description": "## Sidebar 多级列表\n\n列表的每一项是一个`entry`，主要字段是`id`，`type`和`title`。\n\n- `id`: 全局唯一标识\n- `type`: 合法取值为`note`，`group`或`link`\n- `title`: 标题\n\n一个`entry`下可以嵌套子`entry`，形成树形结构。\n\n### 查询流程\n\n1. 调用`Get Workspace`拿到 Private 和 Team Space 分别对应的最外层`entry id`。\n2. 调用`Get Sub-Entries`，传参`entry id`，拿到该`entry`直接嵌套的子`entry`列表。\n3. 如果子`entry`继续嵌套子`entry`（`has_sub_entries`为`true`），递归调用`Get Sub-Entries`。\n\n### 拖拽/移动流程\n\n调用`Update Entry`，更新`entry`的`parent`和`position`。",
         "title": "AIKnow API",
         "contact": {},
-        "license": {
-            "name": "GPLv3"
-        },
         "version": "1.0"
     },
     "paths": {
@@ -47,6 +45,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "1000005",
                         "description": "Entry ID",
                         "name": "entry_id",
                         "in": "path",
@@ -63,7 +62,7 @@
                 }
             },
             "put": {
-                "description": "Update properties of an entry.\n|      Field      | Required |      Description      |\n| :-------------: | :------: | :-------------------: |\n|      title      |    No    |  Title of the entry   |\n|     parent      |    No    |    Parent entry ID    |\n| posistion_after |    No    | Position of the entry |\n",
+                "description": "Update properties of an entry.\n|      Field      | Required |      Description      |\n| :-------------: | :------: | :-------------------: |\n|      title      |    No    |  Title of the entry   |\n|     parent      |    No    |    Parent entry ID    |\n| posistion_after |    No    | Position of the entry |\n\n\u003e - If `title` is non-empty, update title of the entry.\n\u003e - If `parent` is non-empty, move the entry to the specified parent entry.\n\u003e     - If `position_after` is empty, the new entry will be the first in parent's sub-entries. Otherwise, it's positioned after the specified sub-entry.",
                 "tags": [
                     "Sidebar"
                 ],
@@ -71,6 +70,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "1000005",
                         "description": "Entry ID",
                         "name": "entry_id",
                         "in": "path",
@@ -104,6 +104,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "1000005",
                         "description": "Entry ID",
                         "name": "entry_id",
                         "in": "path",
@@ -123,6 +124,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "1000005",
                         "description": "Entry ID",
                         "name": "entry_id",
                         "in": "path",
@@ -158,6 +160,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "1000005",
                         "description": "Entry ID",
                         "name": "entry_id",
                         "in": "path",
